commit ff2d2f00d33d053501bb4272a18c70c03a187a9a
Author: J. R. Okajima <hooanon05@yahoo.co.jp>
Date:   Wed Feb 24 14:33:31 2010 +0900

    aufs: cosmetic clean-up for rdu.c
    
    Signed-off-by: J. R. Okajima <hooanon05@yahoo.co.jp>

commit d53ad817c894a6f2cb9df18f03d0a39de09471c4
Author: J. R. Okajima <hooanon05@yahoo.co.jp>
Date:   Wed Feb 24 14:08:58 2010 +0900

    aufs: cosmetic clean-up for export.c
    
    Signed-off-by: J. R. Okajima <hooanon05@yahoo.co.jp>

commit b3010c40ace1227389cc0cd056f81a8fab7e00d1
Author: J. R. Okajima <hooanon05@yahoo.co.jp>
Date:   Wed Feb 24 14:00:07 2010 +0900

    aufs: cosmetic clean-up for hinotify.c
    
    Signed-off-by: J. R. Okajima <hooanon05@yahoo.co.jp>

commit de2f58458f244208048b282a795353975ce2b9f0
Author: J. R. Okajima <hooanon05@yahoo.co.jp>
Date:   Wed Feb 24 13:48:56 2010 +0900

    aufs: cosmetic clean-up for sysfs.c
    
    Signed-off-by: J. R. Okajima <hooanon05@yahoo.co.jp>

commit 48cde7d5fdb6b78f50ba09d8386eeca05231bdd9
Author: J. R. Okajima <hooanon05@yahoo.co.jp>
Date:   Wed Feb 24 13:44:21 2010 +0900

    aufs: cosmetic clean-up for i_op_ren.c
    
    Signed-off-by: J. R. Okajima <hooanon05@yahoo.co.jp>

commit c76d24a2a70121f47678c5d79d0361a5590c5205
Author: J. R. Okajima <hooanon05@yahoo.co.jp>
Date:   Mon Feb 22 23:00:08 2010 +0900

    aufs: cosmetic clean-up for i_op_del.c
    
    Signed-off-by: J. R. Okajima <hooanon05@yahoo.co.jp>

commit 82a2906ff8d0ce227d56ec5cf3f615247124aa9b
Author: J. R. Okajima <hooanon05@yahoo.co.jp>
Date:   Mon Feb 22 12:50:14 2010 +0900

    aufs: tiny, just tabify
    
    Signed-off-by: J. R. Okajima <hooanon05@yahoo.co.jp>

commit 96565321bb0f67d7106c3089f7bc24f98bbdc998
Author: J. R. Okajima <hooanon05@yahoo.co.jp>
Date:   Sun Feb 21 23:47:54 2010 +0900

    aufs: minor optimization in au_conv_oflags()
    
    Signed-off-by: J. R. Okajima <hooanon05@yahoo.co.jp>

commit 1e89b3d30002ede54006d389b31ad4515c9a981a
Author: J. R. Okajima <hooanon05@yahoo.co.jp>