@@ -1,3 +1,13 @@
+commit 1f18243787e259b9805383e7750ad6ca4f02c823
+Author: J. R. Okajima <hooanon05@yahoo.co.jp>
+Date:   Sun Feb 28 17:09:00 2010 +0900
+
+    Revert "aufs: cosmetic clean-up for export.c"
+    
+    This reverts commit d53ad817c894a6f2cb9df18f03d0a39de09471c4.
+    Because IS_ERR() macro uses 'unlikely' internally, and I am afraid such
+    nested use-case may confuse someone or something (compiler).
+
 commit ff2d2f00d33d053501bb4272a18c70c03a187a9a
 Author: J. R. Okajima <hooanon05@yahoo.co.jp>
 Date:   Wed Feb 24 14:33:31 2010 +0900
